@@ -38,6 +38,8 @@ afsnormalrights                "Normale Rechte"
 afsremoveuser                  "Mitglied(er) entfernen"
 afsrenamegroup                 "Gruppe umbenennen"
 afssaveacl                     "Rechte Speichern"
+autorefresh                    "Automatische Seitenaktualisierung: "
+autorefreshbutton              "Seitenaktualisierung"
 bookmarks                      "-- Lesezeichen --"
 cancel                         "Abbrechen"
 canceledit                     "Wirklich?"
@@ -146,6 +148,7 @@ navpageview                    "Seitenweise anzeigen"
 navpageviewtooltip             "Zeige Einträge Seite für Seite."
 navprevtooltip                 "Vorherige Seite"
 newfilename                    "&bull; Neue Datei: "
+off                            "Aus"
 others                         "Andere:"
 pagelimit                      "Zeige: "
 pagelimittooltip               "Zeige pro Seite ..."
