@@ -45,6 +45,8 @@ afsremoveuser                  "Remove Selected Member(s)"
 afsrenamegroup                 "Rename Selected Group"
 afssaveacl                     "Save Permissions"
 afswrite                       "write"
+autorefresh                    "Automatic page refresh: "
+autorefreshbutton              "Page Refresh"
 bookmarks                      "-- Bookmarks --"
 cancel                         "Cancel"
 canceledit                     "Really?"
@@ -161,6 +163,7 @@ navprev                        " &lt;&lt; "
 navprevblind                   " &lt;&lt; "
 navprevtooltip                 "Previous Page"
 newfilename                    "&bull; File name: "
+off                            "Off"
 others                         "others:"
 pagelimit                      "Show: "
 pagelimittooltip               "Show per page ..."
